Fix showing shop items on small screens, other related copysmithing

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -140,6 +140,10 @@ ul, ol {
   text-align: center;
 }
 
+.shop-items a:nth-child(4) {
+  display: none;
+}
+
 .shop-items figure {
   width: 13rem;
   min-height: 18rem;
@@ -240,7 +244,7 @@ ul, ol {
 
 @include responsive-break-point(880px) {
   html {
-    font-size: 0.75rem;
+    font-size: 0.85rem;
   }
 
   body {
@@ -263,36 +267,52 @@ ul, ol {
   nav ul {
     margin-bottom: 0;
   }
+
+  nav li span {
+    display: none;
+  }
+
+  .shop-items figure {
+    width: 30%;
+    margin: 0.4rem;
+  }
+
+  .shop-items figure span {
+    display: block;
+    width: 100%;
+  }
+
+  .shop-items figure img {
+    max-width: 16rem;
+    min-height: 12rem;
+  }
 }
 
 @include responsive-break-point(640px) {
+  html {
+    font-size: 0.75rem;
+  }
+
   .header {
     padding: 1rem 2rem 0.75rem;
   }
 
   .logo {
-    max-width: 70%;
+    max-width: 65%;
   }
 
   nav {
     margin: 1rem -1rem 1rem;
   }
 
-  nav li {
-    span {
-      display: none;
-    }
-  }
-
-  section .etsy-items a {
-    width: 8rem;
-    height: 8rem;
+  main {
+    padding: 2rem 1.5rem;
   }
 }
 
 @include responsive-break-point(480px) {
   nav {
-    margin: 0 0 0.1rem;
+    margin: 0 -1rem 0.1rem;
   }
 
   nav li {
@@ -316,16 +336,23 @@ ul, ol {
 
   h1 {
     font-size: 1.6rem;
-    font-weight: normal;
+    letter-spacing: -1px;
   }
 
-  main {
-    padding: 2rem 1.5rem;
+  .shop-items a:nth-child(4) {
+    display: inline;
   }
 
-  section .etsy-items a {
-    width: 6rem;
-    height: 6rem;
+  .shop-items figure {
+    width: 45%;
+    margin: 0.4rem;
+    min-height: 15rem;
+  }
+
+  .shop-items figure span {
+    display: block;
+    width: 100%;
+    height: 12rem;
   }
 }
 
